  Standard processing is include in Grott for SPH/SPF
- Add PVOutput for SPH (add pvenerytoday == eactoday, same offset => double keyword!) !be awere not tested with real inverters yet!
- Add PVOutput for SPF (add pvenerytoday == epvtoday, pvpowerout=opwatt, pvgridvoltage = outputvolt, same offset => double keywords!) !be awere not tested with real inverters yet!
- Added keyword incl :  yes/no  to layout value definition. "incl" : "no"  means this value processing is suppresed and will not be shown in
  verbose output and not sent to MQTT and Influxdb. Added some keyword with incl = no (where commented out in prev versions) 
  includeall=True (gincludall=True) will process also exluded values. 
2.6.1
- Include support for Growatt Smart Meter (connected with inverter)
  Seperate MQTT, Influx records will be created (with datalogserial, smart meter id,  as device/mesurement)
  Power and tot energy being used from grid are sent to PVOutput.org in 2 additional calls. 
2.6.1a
- Bugfix SPF record processing
2.6.1b
- Filter (ignore) invalid 0120 smart meter record
2.6.1c
- Bugfix when sendbuf = False now only buffered records are filtered.  In the pase if specified also non buffered records were filtered. 
- Be aware: Buffered records with invalid time (time from server) are also filtered.
2.6.1d
-Added statement to [pvoutput] section: pvinverter = 2 [This specifies # inverters to be processed, See also issue #53]
-Change grott home directory from Growatt in Grott [see issue #71]
2.6.1e
- Merge pull request #57 from redthor/2.6-print-env
2.6.1f
- bugfix for spf3000 fields pvenergytoday, pvenergytotal (and add duplicate fields as called in growatt xls/csv reports epvToday, epvTotal)
2.6.1g
- add support for TL3-X inverters. Please specify invtype=tl3 in the [Generic] section of the .ini file (or env variable : -e ginvtype=tl3 for docker run)
2.7.0
- SDM630/Raillog connect support
- SDM630/Inverter connected 3 phases support