@@ -1,6 +1,6 @@
 # grottdata.py processing data  functions
-# Updated: 2022-01-15
-# Version 2.7.0
+# Updated: 2022-01-16
+# Version 2.7.0a
 
 #import time
 from datetime import datetime, timedelta
@@ -425,8 +425,14 @@ def procdata(conf,data):
                 return
 
         if conf.nomqtt != True:
+            #if meter data use mqtttopicname topic
+            if (header[14:16] in ("20","1b")) and (conf.mqttmtopic == True) :
+                mqtttopic = conf.mqttmtopicname 
+            else : mqtttopic = conf.mqtttopic    
+            print("\t - " + 'Grott MQTT topic used : ' + mqtttopic)   
+            
             try: 
-                publish.single(conf.mqtttopic, payload=jsonmsg, qos=0, retain=False, hostname=conf.mqttip,port=conf.mqttport, client_id=conf.inverterid, keepalive=60, auth=conf.pubauth)
+                #publish.single(mqtttopic, payload=jsonmsg, qos=0, retain=False, hostname=conf.mqttip,port=conf.mqttport, client_id=conf.inverterid, keepalive=60, auth=conf.pubauth)
                 if conf.verbose: print("\t - " + 'MQTT message message sent') 
             except TimeoutError:     
                 if conf.verbose: print("\t - " + 'MQTT connection time out error') 
